# p4bricks

./: .gitignore  README.md  configure.ac
PI/bm/PI/: pi.h
include/: Makefile.am
include/bm/bm_linker/: link_headers.h  link_parsers.h  linker.h  linker_commons.h  linker_trace_macro.h  p4objects_linker_ext.h
include/bm/bm_sim/: P4Objects.h  context.h  headers.h  parser.h  switch.h
mininet/: p4_mininet.py
src/bm_sim/: Makefile.am  context.cpp  parser.cpp  switch.cpp
src/bm_sim/linker/: link_headers.cpp  link_parsers.cpp  linker.cpp  linker_commons.cpp  p4objects_linker_ext.cpp
targets/: Makefile.am
targets/simple_linker/: Makefile.am  config-command  edge.p4  enterprise.p4  linker_switch  linker_switch.cpp  linker_switch.h  linker_switch_CLI.in  lswitch_CLI.py  simple_linker  simple_linker.cpp  sp.p4  test_cmd_scratch.txt
targets/simple_linker/lswitch_runtime/: LinkerSwitch-remote  LinkerSwitch.py  __init__.py
targets/simple_linker/tests/input-jsons/: dc.json  dc.p4i  enterprise.json  enterprise.p4i  enterprise.p4rt
targets/simple_linker/tests/input-p4s/: datacenter.p4  dc.p4  enterprise.p4  enterprise.p4.14
targets/simple_linker/thrift/: linker_switch.thrift
targets/simple_linker/thrift/src/: LinkerSwitch_server.cpp
targets/simple_router/: simple_router.json
